--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,5 +29,28 @@
 </head>
 <body>
     
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">EconomySF</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active"> <a class="nav-link" href="/">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/test.html">Test</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/Services.html">Services</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/Residential.html">Residential</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/Commercial.html">Commercial</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/SewerService.html">Sewer Service</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/DrainCleaning.html">Drain Cleaning</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/EnergySaving.html">Energy Saving</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/AboutUs.html">About Us</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/Testimonials.html">Testimonials</a> </li>
+          </ul>
+        </div>
+    </nav>
+
 </body>
 </html>
