button href test styling

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -51,6 +51,14 @@
           </ul>
         </div>
     </nav>
+    
+    <h1>Hello, world!</h1>
+    
+    <a href="https://getbootstrap.com/docs/4.0/components" target="_blank" >
+        <button type="button" class="btn btn-dark" id="bs4d">Bootstrap 4 Docs</button>
+    </a>
+    <p>Test for onclick button JS and Styling.</p>
+    <br /><br />
 
 </body>
 </html>
