Rename home.html to index.html to follow default page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,9 +15,9 @@
     <!-- Embedding data within url -->
     <meta property="og:title" content="EconomySF Development" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://economysf.esarnb.com" />
+    <meta property="og:url" content="https://economysf.com" />
     <!-- <meta property="og:image" content="http://my.site.com/images/thumb.png" /> -->
-    <meta property="og:description" content="EconomySF dev server for Mysterious Guy & Joel" />
+    <meta property="og:description" content="EconomySF dev server" />
     <meta name="theme-color" content="#00FFFF">
 
     <!-- Include this to make the og:image larger -->
