added and organized images, coloring for tables

--- a/about-san-francisco-economy-plumbing.html
+++ b/about-san-francisco-economy-plumbing.html
@@ -13,19 +13,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Embedding data within url -->
-    <meta property="og:title" content="EconomySF" />
+    <!-- <meta property="og:title" content="EconomySF Development" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://economysf.com" />
-    <meta property="og:description" content="Economy Plumbing for San Francisco." />
-    <meta name="theme-color" content="#00FFFF">
-    <meta property="og:image" content="./Images/Global/economy-plumbing-sewer-drain.jpg" />
+    <meta property="og:description" content="EconomySF dev server" />
+    <meta name="theme-color" content="#00FFFF"> -->
+    <!-- <meta property="og:image" content="http://my.site.com/images/thumb.png" /> -->
 
     <!-- Include this to make the og:image larger -->
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
 
     <!-- Main Page Custom CSS -->
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="favicon.png">
+
     <title>EconomySF</title>
 </head>
 
