--- a/plumbing-services-san-francisco.html
+++ b/plumbing-services-san-francisco.html
@@ -13,19 +13,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Embedding data within url -->
-    <meta property="og:title" content="EconomySF" />
+    <!-- <meta property="og:title" content="EconomySF Development" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://economysf.com" />
-    <meta property="og:description" content="Economy Plumbing for San Francisco." />
-    <meta name="theme-color" content="#00FFFF">
-    <meta property="og:image" content="./Images/Global/economy-plumbing-sewer-drain.jpg" />
+    <meta property="og:description" content="EconomySF dev server" />
+    <meta name="theme-color" content="#00FFFF"> -->
+    <!-- <meta property="og:image" content="http://my.site.com/images/thumb.png" /> -->
 
     <!-- Include this to make the og:image larger -->
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
 
     <!-- Main Page Custom CSS -->
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="favicon.png">
+
     <title>EconomySF</title>
 </head>
 
@@ -120,15 +120,7 @@
     </div>
 
    <!-- BODY CONTENT -->
-   <div class="row">
-    <div class="col-sm"></div>
-    <div class="col-sm">
-      <div class="row"></div>
-      <div class="row"></div>
-      <div class="row"></div>
-    </div>
-  </div>
-
+   <h1 class="center">Services</h1>
 
 
     <div id=locTable class="row">
@@ -154,7 +146,7 @@
           </tr>
           <tr>
             <td>
-              <p class="locField">MARINA - NORTH BEACH - PACIFIC HTS - <b></b>LAUREL HTS</p>
+              <p class="locField">MARINA - NORTH BEACH - PACIFIC HTS - LAUREL HTS</p>
               <p class="locField locNum">415 658-9613</p>
               <p class="locField">BROADWAY & FILMORE</p>
             </td>
@@ -175,12 +167,12 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
-          <!-- <span id="social" class="center"> -->
-            <a href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg" src="./Images/Global/facebook.png" alt="Facebook"/> </a>
-            <a href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026" target="_blank"> <img id="bbb"class="footerImg" src="./Images/Global/bbb.png" alt="BBB"/> </a>
-            <a href="https://twitter.com/#!/EconomySF" target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter"/> </a>
-          <!-- </span> -->
+        <p>
+          <span id="social" class="center">
+            <a href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img src="./Images/Global/facebook.png" alt="Facebook" height="25px"/> </a>
+            <a href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026" target="_blank"> <img id="bbb" src="./Images/Global/bbb.png" alt="BBB" height="25px"/> </a>
+            <a href="https://twitter.com/#!/EconomySF" target="_blank"> <img src="./Images/Global/twitter.png" alt="Twitter" height="25px"/> </a>
+          </span>
         </p>
         <p id="copyright" class="center">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
