CSS organized, Home content formatted

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
+            <ul id="navUL" class="navbar-nav mr-auto mt-2 mt-lg-0 ">
               <li class="navBtns nav-item active"> <a class="nav-link text-dark" href="/">Home</a> </li>
               <li class="navBtns nav-item "> <a class="nav-link text-dark"
                   href="/plumbing-services-san-francisco.html">Services</a> </li>
@@ -141,15 +141,15 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <img src="./Images/Index/why-wait.jpg" height="200" alt="Why wait" />
+        <img id="why-wait-img" src="./Images/Index/why-wait.jpg" alt="Why wait"/>
       </div>
 
       <div class="col-sm">
         <div class="row">
-          <img src="./Images/Index/fast-free-estimate-4888.jpg" height="50" alt="Fast Free Estimate" />
+          <img id="fast-free-img" src="./Images/Index/fast-free-estimate-4888.jpg" alt="Fast Free Estimate"/>
         </div>
         <div class="row">
-          <img src="./Images/Global/bbb.png" alt="bbb" height="50">
+          <img id="bbb-img" src="./Images/Global/bbb.png" alt="bbb" />
           <h5>BBB Accredited Business Lifetime Guarantee.</h5>
         </div>
 
@@ -173,7 +173,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row center">
       <h4>We Offer</h4>
       <ul>
         <li>24/7 Plumber Service - Nights & Weekends No Extra Charge </li>
@@ -234,7 +234,7 @@
               src="./Images/Global/facebook.png" alt="Facebook" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="BBB Page"
             href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026"
-            target="_blank"> <img id="bbb" class="footerImg" src="./Images/Global/bbb.png" alt="BBB" /> </a>
+            target="_blank"> <img id="bbb-footer" class="footerImg" src="./Images/Global/bbb.png" alt="BBB" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
