Copied format to all pages, edited embed url

--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <img id="why-wait-img" src="./Images/Index/why-wait.jpg" alt="Why wait"/>
+        <div id="why-wait-div">
+          <div class="">Affordable Plumber that you can rely on!</div>
+          <img id="why-wait-img" src="./Images/Index/why-wait.jpg" alt="Why wait">
+        </div>
       </div>
 
       <div class="col-sm">
@@ -156,7 +159,7 @@
         <!-- </div>
         <div class="row"> -->
 
-        <h1>San Francisco Sewer Repair</h1>
+        <h1 id="sf-sewer-repair">San Francisco Sewer Repair</h1>
         <ul>
           <li>Plumbing from A to Z </li>
           <li>Drain Back-up Clearing </li>
@@ -174,7 +177,7 @@
     </div>
 
     <div class="row center">
-      <h4>We Offer</h4>
+      <h4 id="we-offer">We Offer</h4>
       <ul>
         <li>24/7 Plumber Service - Nights & Weekends No Extra Charge </li>
         <li>Senior Discounts </li>
