residential content, services last line content

--- a/plumbing-services-san-francisco.html
+++ b/plumbing-services-san-francisco.html
@@ -260,7 +260,12 @@
         </p> -->
       </div>
 
+    </div>
 
+    <div class="row">
+      <div class="col-sm">
+        <p>We urge to arrive within 45 min after your call and provide same day service. Complicated services or services required permits might take a few days, but always done promptly. Written Free Estimate must be provided before any job started.</p>
+      </div>
     </div>
     
     <!-- Big Footer Table-->
