--- a/residential-plumbing-service.html
+++ b/residential-plumbing-service.html
@@ -141,7 +141,35 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">Residential</h1>
+        <div id="services-body1">
+          <h1 id="services-title">Residential Plumbing Services</h1>
+          <span>
+            <img id="service-pipes-img" src="./Images/Residential/bathroom.jpg" alt="Water Pipes" />
+            <div id="residential-text-content">
+              <p>
+                Economy Sewer and Drain takes pride in how we treat our customer’s home during installations and after repairs are completed. Our technicians will arrive on time, in a logoed company vehicle, wearing a logoed shirt. Our technicians are courteous, state certified, and have passed mandatory company screenings. Economy’s clients always feel secure, and know that their homes plumbing needs will be addressed professionally and completed in a timely fashion. Our company is licensed, bonded and insured and has built a reputation of honesty, integrity and fairness, plus we guarantee all our work. We offer free estimates before we start a job. We accept Visa, Discovery and Master Card.
+              </p>
+  
+              <p class="pBold">Home & Condominium Services</p>
+              <p>Economy Plumbing, Sewer and Drain is San Francisco’s first choice for residential contract service. We offer low cost repair and replacement for faucets, toilets, garbage disposals, water heaters, water lines and drain cleaning.</p>
+              <p>We'll do any of those and much more:</p>
+              <p class="pBold">Our Highlighted Services We Offer</p>
+              <p>Economy Provides Underground leak detection, Slab leak detection, Rough and Finish Plumbing and Service.</p>
+              <p class="pBold">Water Heater Installation, Repair, and Replacement</p>
+                <ul>
+                  <li>Installation and Maintenance</li>
+                  <li>Natural Gas & Electric Water Heaters</li>
+                </ul>
+              <p class="pBold">Sewer Line Services</p>
+                <ul>
+                  <li>Sewer Line Cleaning</li>
+                  <li>Trenchless Sewer Replacemant</li>
+                  <li>Fixing Tree Roots Damage of Sewer Line</li>
+                </ul>
+              <p>Looking to save money, visit our Energy Savings Tip page.</p>
+            </div>
+          </span>
+        </div>
       </div>
     </div>
 
