Add Commercial page information

--- a/commercial-plumbing.html
+++ b/commercial-plumbing.html
@@ -141,7 +141,37 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">Commercial</h1>
+        <div class="row">
+          <div class="col-sm">
+            <h1 class="center textcenter">Commercial</h1>
+            <p>Round-the-clock Responsiveness</p>
+            <p>Economy Plumbing is a state certified commercial plumbing contractor. Our licensed, bonded and insured company has built a reputation of honesty, integrity and fairness, and we guarantee all our work.</p>
+            <p>Our technicians arrive uniformed, in an “Economy Plumbing” company vehicle. All service vehicles are fully stocked with specialized equipment, so that our technicians are prepared to deliver fast dependable service.</p>
+          </div>
+          <div class="col-sm">
+            <img src="Images/Commercial/sink.jpg" alt="sink"/>
+          </div>
+          <div class="row">
+            <div class="col-sm">
+              <h3>Complete Plumbing Services</h3>
+              <p>
+                <br/>Economy Plumbing’s certified backflow technicians take on a variety of commercial and multi- dwelling residential projects. Always abiding to state regulations and keeping up with industry standards. We utilize the latest technology to install, repair and replace pipes. We also service septic systems, grease trap and liquid waste pumping, backflow protection, ejector pumps, automated drain care programs, pipe repair and replacement, drain cleaning, high pressure water jetting, video camera pipe inspections, underground leak detection, slab leak detection, and water heater maintenance, removal, installation or replacement.
+              </p>
+              <h3>Commercial Projects</h3>
+              <p>
+                Whether your business has one main office or operates in multiple cities, Economy Plumbing is prepared to create a commercial plumbing maintenance program to meet any of your needs. Our professionals are also available to review and prepare proposals for upcoming new construction and remodeling projects, or to simply discuss generalized maintenance needs and their timely scheduling.
+              </p>
+              <h3>We're Available</h3>
+              <p>
+                Need an appointment? Scheduling is easy, we will accommodate a time that best serves you and your companies needs. Need Emergency Service? We’re on call 24/7, Day or Night with No Additional Charge For After Hours Service Calls! Guaranteed 45 minute response time!
+              </p>
+              <h3>Property Managers, ask about our $58.00 drain or sewer cleaning special.($159.00 Value)</h3>
+              <p>
+                Serving: Mission, Potero, Downtown, Daly City, Colma, South City, Sunset, Richmond, Stonestown, Marina, North Beach, Pacific Heights, Laurel Heights, Haight Ashbury, Noe Valley, Twin Peaks, Glen Park, Excelsior and West Portal.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
