center to centerCSS class, added global p styling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="row no-gutters">
       <div class="col-sm">
-        <img id="epsdPic" class="center" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
+        <img id="epsdPic" class="centerCSS" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
           alt="economy plumbing sewer and drain" />
       </div>
     </div>
@@ -176,7 +176,7 @@
 
     </div>
 
-    <div class="row center">
+    <div class="row centerCSS">
       <h4 id="we-offer">We Offer</h4>
       <ul>
         <li>24/7 Plumber Service - Nights & Weekends No Extra Charge </li>
@@ -231,7 +231,7 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
+        <p class="centerCSS">
           <a data-toggle="tooltip" data-placement="top" title="Facebook Page"
             href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg"
               src="./Images/Global/facebook.png" alt="Facebook" /> </a>
@@ -241,7 +241,7 @@
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
-        <p id="copyright" class="center">
+        <p id="copyright" class="centerCSS">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
         </p>
         
