Residential content and centering

--- a/residential-plumbing-service.html
+++ b/residential-plumbing-service.html
@@ -49,7 +49,7 @@
 
     <div class="row no-gutters">
       <div class="col-sm">
-        <img id="epsdPic" class="center" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
+        <img id="epsdPic" class="centerCSS" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
           alt="economy plumbing sewer and drain" />
       </div>
     </div>
@@ -139,10 +139,11 @@
     </div>
 
     <!-- BODY CONTENT -->
+
     <div class="row">
       <div class="col-sm">
-        <div id="services-body1">
-          <h1 id="services-title">Residential Plumbing Services</h1>
+        <div id="page-body">
+          <h1 id="page-title">Residential Plumbing Services</h1>
           <span>
             <img id="service-pipes-img" src="./Images/Residential/bathroom.jpg" alt="Water Pipes" />
             <div id="residential-text-content">
@@ -218,7 +219,7 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
+        <p class="centerCSS">
           <a data-toggle="tooltip" data-placement="top" title="Facebook Page"
             href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg"
               src="./Images/Global/facebook.png" alt="Facebook" /> </a>
@@ -228,7 +229,7 @@
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
-        <p id="copyright" class="center">
+        <p id="copyright" class="centerCSS">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
         </p>
         
