proper img id, left padding of img

--- a/residential-plumbing-service.html
+++ b/residential-plumbing-service.html
@@ -145,8 +145,8 @@
         <div id="page-body">
           <h1 id="page-title">Residential Plumbing Services</h1>
           <span>
-            <img id="service-pipes-img" src="./Images/Residential/bathroom.jpg" alt="Water Pipes" />
-            <div id="residential-text-content">
+            <img id="residential-bathroom-img" src="./Images/Residential/bathroom.jpg" alt="Water Pipes" />
+            <div>
               <p>
                 Economy Sewer and Drain takes pride in how we treat our customer’s home during installations and after repairs are completed. Our technicians will arrive on time, in a logoed company vehicle, wearing a logoed shirt. Our technicians are courteous, state certified, and have passed mandatory company screenings. Economy’s clients always feel secure, and know that their homes plumbing needs will be addressed professionally and completed in a timely fashion. Our company is licensed, bonded and insured and has built a reputation of honesty, integrity and fairness, plus we guarantee all our work. We offer free estimates before we start a job. We accept Visa, Discovery and Master Card.
               </p>
