--- a/drain-cleaning.html
+++ b/drain-cleaning.html
@@ -141,7 +141,44 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">Drain Cleaning</h1>
+        <div id="page-body">
+          <h1 id="page-title">Drain Cleaning</h1>
+          <span>
+            <img id="drain-sink" src="./Images/Drain/drain.jpg" alt="Sink Drain with water pouring.">
+            <div>
+              <p>Drain cleaning is the process of clearing out blocked or clogged drains.  There are many different terms for drain cleaning.  Some people refer to it as drain rodding, snaking a drain, rooter drain service or jetting. </p>
+
+              <p>Economy’s technicians are state certified <span class="pBold">plumbing professionals</span>, abreast with industry standards and protocol.  Our drain cleaning service includes a complete survey of the pipes condition by means of a video inspection.  Once the true source of a clog is identified, we can pin point the area requiring service.  Economy’s recommended service will vary depending on the condition of the pipes. </p>
+
+              <p>For <span class="pBold">clogged kitchen & Bathroom sink drains, bathtub & shower drains, garage floor and back yard drains</span> – call Economy, we can fix it.  Economy’s preferred service is water jetting.  Water jetting is a “high force” of water pressure, which flushes away debris which over time has adhered to a pipes wall.   Water jetting is the safest, most effective and “Green” way to clean clogged pipes.  Our water jetting units are specially designed to clean the pipelines of residences, multi-level residences, commercial facilities and schools.</p>
+
+              <p class="pBold">Questions</p>
+              <p><span class="pBold">How do you know if a drain cleaning is needed?</span> Pipes don’t lie, it will be obvious that they require cleaning when water is left standing and will not go down the drain.  However, immediate action is necessary if all drains on a plumbing system drain too slowly or are completely clogged.</p>
+
+              <p><span class="pBold">How do you know how bad a clog is?</span> To properly survey a clogged drain, it is necessary to perform a video inspection prior to recommending a particular service.  The overall condition of a pipes structure will dictate the most appropriate and effective service method.</p>
+
+              <p class="pBold">Drain Pipe Cleaning Techniques, Tips and Recommendations</p>
+              <p>At some point, everyone has dealt with a slow drain.  Frustrations build as you stand there staring at the debris circling the drain.  Inevitably, like many homeowners, you look for an instant fix.  Television ads promote the use of quick fix drain cleaning products.  In a perfect animated world, these illustrations clear away clogs perfectly.</p>
+
+              <p>However, industry professionals know certain chemicals damage plumbing systems, and repetitive instant fixes create bigger problems down the road, corrosion.  As corrosion builds within a drain pipe it eats through a pipes structure causing it to leak.  These leaks are often formed in areas you least expect them or want them.  A slow leak within the cavity of a wall will often go undetected for a time, creating structural deterioration.  These leaks also provide the necessary moisture for dormant mold spores to grow.  Ultimately this situation will inevitably cause health issues for those who live or work near subsequent water damage.</p>
+
+              <p>So, think twice before you pour that store bought drain cleaning solution down your pipes, if a store bought solution must be your first line of defense.  Be sure to never mix these chemicals.  Ensure they are non-chemical based or non-corrosive agents.  Always keep chemicals out of reach from children and pets.</p>
+
+              <p class="pBold">Call Economy Today</p>
+              <p>Our video inspection will help you make an informed decision regarding your clogged pipes.  We specialize in drain cleaning, and will remedy your clogged pipes! </p>
+
+              <p class="pBold">We’re Available</p>
+              <p>Need an appointment? Scheduling is easy, we will accommodate a time that best serves your needs.  </p>
+
+              <p>Need Emergency Service?  We’re on call  24/7,  Day or Night with No Additional Charge For After Hours Service Calls!  Guaranteed 45 minute response time!</p>
+
+              <h5  class="pBold">Ask about our $58.00 drain or sewer cleaning special. ($159.00 Value)</h5>
+              <p>Serving:  Mission, Potero, Downtown, Daly City, Colma, South City, Sunset, Richmond, Stonestown, Marina, North Beach, Pacific Heights, Laurel Heights, Haight Ashbury, Noe Valley, Twin Peaks, Glen Park, Excelsior and West Portal.</p>
+
+              
+            </div>
+          </span>
+        </div>
       </div>
     </div>
 
