Fixed formatting of picture and text

--- a/commercial-plumbing.html
+++ b/commercial-plumbing.html
@@ -139,23 +139,19 @@
     </div>
 
     <!-- BODY CONTENT -->
-    <!-- <div class="row"> -->
-      <div class="col-sm">
-        <div class="row" id="page-body">
+      <!-- <div class="col-sm" id="lh-content"> -->
+        <div class="row lh-content" id="page-body">
           <div class="col-sm">
             <h1 id="page-title">Commercial</h1>
-            <p class="pBold">Round-the-clock Responsiveness</p>
-            <p>Economy Plumbing is a state certified commercial plumbing contractor. Our licensed, bonded and insured company has built a reputation of honesty, integrity and fairness, and we guarantee all our work.</p>
-            <p>Our technicians arrive uniformed, in an “Economy Plumbing” company vehicle. All service vehicles are fully stocked with specialized equipment, so that our technicians are prepared to deliver fast dependable service.</p>
-          </div>
-          <div class="col-sm">
-            <img src="Images/Commercial/sink.jpg" alt="sink"/>
-          </div>            
-          <div class="row">
-            <div class="col-sm">
+              <span>
+                <img id="sink-img" src="Images/Commercial/sink.jpg" alt="sink"/>
+                <p class="pBold">Round-the-clock Responsiveness</p>
+                <p>Economy Plumbing is a state certified commercial plumbing contractor. Our licensed, bonded and insured company has built a reputation of honesty, integrity and fairness, and we guarantee all our work.</p>
+                <p>Our technicians arrive uniformed, in an “Economy Plumbing” company vehicle. All service vehicles are fully stocked with specialized equipment, so that our technicians are prepared to deliver fast dependable service.</p>
+              </span>
               <p class="pBold pt-3">Complete Plumbing Services</p>
               <p>
-                <br/>Economy Plumbing’s certified backflow technicians take on a variety of commercial and multi- dwelling residential projects. Always abiding to state regulations and keeping up with industry standards. We utilize the latest technology to install, repair and replace pipes. We also service septic systems, grease trap and liquid waste pumping, backflow protection, ejector pumps, automated drain care programs, pipe repair and replacement, drain cleaning, high pressure water jetting, video camera pipe inspections, underground leak detection, slab leak detection, and water heater maintenance, removal, installation or replacement.
+                Economy Plumbing’s certified backflow technicians take on a variety of commercial and multi- dwelling residential projects. Always abiding to state regulations and keeping up with industry standards. We utilize the latest technology to install, repair and replace pipes. We also service septic systems, grease trap and liquid waste pumping, backflow protection, ejector pumps, automated drain care programs, pipe repair and replacement, drain cleaning, high pressure water jetting, video camera pipe inspections, underground leak detection, slab leak detection, and water heater maintenance, removal, installation or replacement.
               </p>
               <p class="pBold">Commercial Projects</p>
               <p>
@@ -171,10 +167,7 @@
               </p>
             </div>
           </div>
-        </div>
-      </div>
-    <!-- </div> -->
-
+    
     <!-- Big Footer Table-->
     <div id=locTable class="row">
 
