--- a/testimonials-bay-area-economy-plumbing.html
+++ b/testimonials-bay-area-economy-plumbing.html
@@ -145,7 +145,8 @@
         <div id="page-body">
           <h1 id="page-title">Testimonials</h1>
           <div  class="lh-content">
-            <div class="card cWidth">
+
+            <div class="card cWidth" id="firstQuote">
               <div class="card-header">
                 <!-- Quote -->
               </div>
@@ -157,9 +158,9 @@
               </div>
             </div>
 
-            <br /><br />
+            <br />
 
-            <div class="card cWidth floatRight" id="centerQuote">
+            <div class="card cWidth floatRight" id="secondQuote">
               <div class="card-header">
                 <!-- Quote -->
               </div>
