Add base href for github pages

--- a/drain-cleaning.html
+++ b/drain-cleaning.html
@@ -35,6 +35,9 @@
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" href="favicon.png">
   <title>EconomySF</title>
+  
+  <base href="https://phillipchang.github.io/economysf/">
+
 </head>
 
 <body>
