--- a/testimonials-bay-area-economy-plumbing.html
+++ b/testimonials-bay-area-economy-plumbing.html
@@ -35,6 +35,9 @@
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" href="favicon.png">
   <title>EconomySF</title>
+  
+  <base href="https://phillipchang.github.io/economysf/">
+
 </head>
 
 <body>
